force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/dsfs__EnvelopeConfiguration__c.object-meta.xml
<CustomObject>
    <label>DocuSign Envelope Configuration</label>
    <nameField>
        <label>DocuSign Envelope Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>