force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__Active__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>