force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__CEM__c.field-meta.xml
<CustomField>
    <fullName>dsfs__CEM__c</fullName>
    <label>Custom Email Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>