force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__CES__c.field-meta.xml
<CustomField>
    <fullName>dsfs__CES__c</fullName>
    <label>Custom Email Subject</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>