force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__ExpireEnabled__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ExpireEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expire Enabled</label>
    <type>Checkbox</type>
</CustomField>