force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__Expires__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expire Envelope</label>
    <type>Checkbox</type>
</CustomField>