force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__LA__c.field-meta.xml
<CustomField>
    <fullName>dsfs__LA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Attachments</label>
    <type>Checkbox</type>
</CustomField>