force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__LF__c.field-meta.xml
<CustomField>
    <fullName>dsfs__LF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Load Files</label>
    <type>Checkbox</type>
</CustomField>