force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__LoadDefaultContacts__c.field-meta.xml
<CustomField>
    <fullName>dsfs__LoadDefaultContacts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Load Default Contacts</label>
    <type>Checkbox</type>
</CustomField>