force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Object_Type__c</fullName>
    <label>Object Type</label>
    <type>TextArea</type>
</CustomField>