force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__OCO__c.field-meta.xml
<CustomField>
    <fullName>dsfs__OCO__c</fullName>
    <label>One Click Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tag</fullName>
            </value>
            <value>
                <fullName>Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>