force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__ReminderEnabled__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ReminderEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Enabled</label>
    <type>Checkbox</type>
</CustomField>