force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__SAA__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SAA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Add Attachment</label>
    <type>Checkbox</type>
</CustomField>