force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__SEM__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SEM__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Email Message</label>
    <type>Checkbox</type>
</CustomField>