force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__SES__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SES__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Email Subject</label>
    <type>Checkbox</type>
</CustomField>