force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__SRS__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SRS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Remind Expire</label>
    <type>Checkbox</type>
</CustomField>